--- a/D3-Homework/assets/public/css/style.css
+++ b/D3-Homework/assets/public/css/style.css
@@ -3,7 +3,20 @@
 }
 
 .tooltip{
+    /*
     position: fixed;
-    opacity:0;
+    text-align: center;
+    opacity:0;*/
+
+    position: absolute;			
+    text-align: center;			
+    width: 60px;					
+    height: 28px;					
+    padding: 2px;				
+    font: 12px sans-serif;		
+    background: lightsteelblue;	
+    border: 0px;		
+    border-radius: 8px;			
+    pointer-events: none;	
 
 }
